# persona-gap

./: .env.example  .gitignore  CHANGELOG_behavioral.md  README.md  pyproject.toml
.codebuddy/plans/: persona-gap-framework_02bad0fd.md  persona-gap-framework_bb85099f(未完成).md
.codebuddy/rules/: 注释请用英文.mdc
configs/: batch_example.toml  experiment.toml
configs/envs/: README.md  leduc_holdem.toml
configs/presets/: aggressive.toml  conservative.toml  cooperative.toml  deceptive.toml
docs/: behavioral_methods.md
examples/: compare_behavioral_methods.py
outputs/default/: checkpoint.json  config.json  episodes.jsonl  trajectory.jsonl
outputs/default/analysis/: metrics.json
scripts/: run_analysis.py  run_batch.py  run_experiment.py
src/persona_gap/: __init__.py
src/persona_gap/agents/: __init__.py  llm_agent.py  memory.py  prompts.py
src/persona_gap/analysis/: __init__.py  visualize.py
src/persona_gap/core/: __init__.py  config.py  models.py
src/persona_gap/envs/: __init__.py  protocol.py  registry.py  rlcard_adapter.py
src/persona_gap/llm/: __init__.py  backend.py
src/persona_gap/metrics/: __init__.py  alignment.py  behavioral.py  behavioral_factory.py  behavioral_llm.py  behavioral_scorer.py  expressed.py  temporal.py
src/persona_gap/runner/: __init__.py  checkpoint.py  experiment.py  logger.py
tests/: test_behavioral_methods.py  test_metrics.py  test_models.py  test_rlcard_adapter.py
